# Gemstone-Price-Predictor-Flask-APP---CICD

./: .gitignore  Dockerfile  app.py  pyproject.toml  test_app.py
.github/workflows/: cicd.yml
artifacts/: model.pkl  preprocessor.pkl  test.csv
notebook/: EDA.ipynb  model_training.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
templates/: form.html  index.html  result.html
